--- a/app/src/main/res/layout/fragment_posts_list.xml
+++ b/app/src/main/res/layout/fragment_posts_list.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
-        android:id="@+id/bp_posts"
+        android:id="@+id/bp_meme"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -30,7 +30,7 @@
         app:layout_constraintVertical_bias="0.5" />
 
     <LinearLayout
-        android:id="@+id/layout_error"
+        android:id="@+id/layout_err"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -41,14 +41,14 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/tv_error"
+            android:id="@+id/tv_err"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Error"
             android:textAppearance="@style/TextAppearance.AppCompat.Display2" />
 
         <Button
-            android:id="@+id/btn_retry"
+            android:id="@+id/btn_try"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Try again" />
